# TASK_03

./: README.md
TASK_03/: CMakeLists.txt  README.md
TASK_03/src/: extract_ball_data.cpp
